# bbb-fake-server

./: .gitignore  Cargo.toml  README.md  Rocket.toml.sample
app/: Cargo.toml
app/src/: checksum.rs  main.rs
app/src/api/: checksum.rs
config/: production.yaml
src/: app.rs  old.rs
src/controllers/: bigbluebutton_api_controller.rs  mod.rs
src/controllers/api/: create.rs
tests/requests/: bigbluebutton_api_controller.rs  home.rs  mod.rs
