[workspace]

[package]
name = "bbb_fake_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sha1_smol = "1"

loco-rs = { version = "0.3.2", default-features = false, features = ["cli"] }
serde = "*"
serde_json = "*"
eyre = "*"
tokio = { version = "1.33.0", default-features = false }
async-trait = "0.1.74"

axum = "0.7.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

[[bin]]
name = "bbb_fake_server-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
serial_test = "*"
rstest = "*"
loco-rs = { version = "0.3.2", default-features = false, features = [
  "testing",
  "cli",
] }
insta = { version = "*", features = ["redactions", "yaml", "filters"] }
